[gd_scene load_steps=3 format=3 uid="uid://bqkebe2nyp6qk"]

[ext_resource type="Script" path="res://_Scenes/UI/EscMenu.gd" id="1_bm10w"]
[ext_resource type="Theme" uid="uid://c8vtm200tbpue" path="res://_Scenes/UI/menutheme.tres" id="1_yin14"]

[node name="EscMenu" type="Control" node_paths=PackedStringArray("escpopup")]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_yin14")
script = ExtResource("1_bm10w")
escpopup = NodePath("PopupMenu")

[node name="PopupMenu" type="PopupMenu" parent="."]
transparent_bg = true
title = "Pause Menu"
initial_position = 1
size = Vector2i(112, 96)
theme = ExtResource("1_yin14")
allow_search = false
item_count = 4
item_0/text = "Return"
item_0/id = 0
item_1/text = "Save/Exit"
item_1/id = 1
item_2/text = "Settings"
item_2/id = 2
item_3/text = "Save/Quit"
item_3/id = 3

[connection signal="index_pressed" from="PopupMenu" to="." method="_on_popup_menu_index_pressed"]
[connection signal="popup_hide" from="PopupMenu" to="." method="_on_popup_menu_popup_hide"]
